# bevy_first

./: Cargo.toml
examples/game/: MassiveEnemy.rs  lib.rs
examples/game/lib/: animation.rs  attribute.rs  camera.rs  collision.rs  constants.rs  enemy.rs  gui.rs  gun.rs  player.rs  resources.rs  state.rs  world.rs
examples/text/: Text2win.rs
src/: main.rs
