[package]
name = "bevy_first"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_pancam = "0.17.0"
rand = "0.9.0"

[features]
default_font = []

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "text2win"
path = "examples/text/Text2win.rs"
doc-scrape-examples = true
required-features = []

[[example]]
name="massive_enemy"
path = "examples/game/MassiveEnemy.rs"
